<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Share Food</string>
    <string name="action_settings">Settings</string>
    <string name="donatedFoodDescription">Description</string>
    <string name="donatedFoodQuantity">Quantity</string>
    <string name="donatedFoodPickupAddress">Pickup Address</string>
    <string name="donatedFoodPickupAddress1Hint">Door #, street name</string>
    <string name="donatedFoodPickupAddress2Hint">Locality</string>
    <string name="donatedFoodPickupCity">City</string>
    <string name="donatedFoodPickupPhone">Phone number</string>
    <string name="donatedFoodSubmitDonation">Submit Donation</string>
    <string name="donatedFoodPostalCode">Pincode</string>
    <string name="title_activity_list_active_donations">ListActiveDonationsActivity</string>
    <string name="hello_world">Hello world!</string>
    <string name="donatedFoodListDonations">List Donations</string>
    <string name="listDonationsEdit">Edit</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>

</resources>
